rename irregular to big purchases

--- a/plann_app/res/locales/ru.json
+++ b/plann_app/res/locales/ru.json
@@ -7,8 +7,8 @@
     "regular": "Расходы на жизнь",
     "regular_short": "РНЖ",
     "regular_help": "Регулярные ежемесячные расходы, необходимые для поддержания текущего уровня жизни.",
-    "irregular": "Нерегулярные расходы",
-    "irregular_short": "НР",
+    "irregular": "Крупные покупки",
+    "irregular_short": "КП",
     "no_expense": "Информации о расходах нет",
     "no_planned_expense": "Расходы не запланированы",
     "targets": "Финансовые цели",
