add family category for expenses

--- a/plann_app/res/locales/ru.json
+++ b/plann_app/res/locales/ru.json
@@ -110,6 +110,7 @@
     "trips": "Поездки",
     "education": "Образование",
     "medicine": "Медицина",
+    "family": "Семья",
     "services": "Услуги",
     "charity": "Благотворительность",
     "credits": "Кредиты",
