fix account help message

--- a/plann_app/res/locales/ru.json
+++ b/plann_app/res/locales/ru.json
@@ -46,7 +46,7 @@
     "field_invalid": "Неправильное значение",
     "delta": "Дельта",
     "account": "Накопительный счет",
-    "account_help": "Виртуальный счет, баланс которого отражает необходимое количество денежных средств в выбранный период времени согласно плану нерегулярных расходов.",
+    "account_help": "Виртуальный счет, баланс которого отражает необходимое количество денежных средств в выбранный период времени согласно плану крупных покупок.",
     "balance": "Баланс",
     "debet": "Приход",
     "fact": "Фактические",
