use shorten numbers

--- a/plann_app/res/locales/ru.json
+++ b/plann_app/res/locales/ru.json
@@ -71,6 +71,12 @@
     "terms_and_conditions": "Условия использования",
     "privacy_policy": "Политика конфиденциальности"
   },
+  "shorten_numbers": {
+    "default": "{value}",
+    "thousand": "{value} тыс.",
+    "million": "{value} млн.",
+    "billion": "{value} млрд."
+  },
   "currency_type_enum": {
     "rubles": "Рубли",
     "euro": "Евро",
