replace icons from table by titles

--- a/plann_app/res/locales/ru.json
+++ b/plann_app/res/locales/ru.json
@@ -4,11 +4,11 @@
     "income_s": "Доходы",
     "no_income": "Информации о доходах нет",
     "no_planned_income": "Доходы не запланированы",
-    "regular": "Расходы на жизнь",
-    "regular_short": "РНЖ",
+    "regular": "Расходы",
+    "regular_short": "Расходы",
     "regular_help": "Регулярные ежемесячные расходы, необходимые для поддержания текущего уровня жизни.",
     "irregular": "Крупные покупки",
-    "irregular_short": "КП",
+    "irregular_short": "Покупки",
     "no_expense": "Информации о расходах нет",
     "no_planned_expense": "Расходы не запланированы",
     "targets": "Финансовые цели",
@@ -36,6 +36,7 @@
     "save": "Сохранить",
     "delete": "Удалить",
     "add": "Добавить",
+    "add_to_list": "Добавить в список",
     "create": "Создать",
     "to_plan": "Запланировать",
     "help": "Справка",
@@ -50,7 +51,12 @@
     "balance": "Баланс",
     "debet": "Приход",
     "fact": "Фактические",
+    "list": "Список",
+    "templates": "Шаблоны",
+    "template": "Шаблон",
+    "create_template": "Создать шаблон",
     "plan": "Плановые",
+    "plan_noun": "План",
     "version": "Версия",
     "subscriptions": "Подписки",
     "subscriptions_not_available": "Подписки недоступны",
