offline mode support for purchase, handle network errors and show message with retry button

--- a/plann_app/res/locales/ru.json
+++ b/plann_app/res/locales/ru.json
@@ -59,7 +59,8 @@
     "plan_noun": "План",
     "version": "Версия",
     "subscriptions": "Подписки",
-    "subscriptions_not_available": "Подписки недоступны",
+    "subscriptions_not_available": "Подписки недоступны, проверьте соединение с интернетом",
+    "try_again": "Попробовать еще раз",
     "subscriptions_offer": "Оформите одну из подписок, чтобы продолжить использование приложения после пробного периода",
     "subscription_cancellation_instruction": "Для управления подпиской перейдите в «Настройки» > [ваше имя] > «Подписки»",
     "subscription_completed": "Подписка оформлена",
