instantiate expense and incomes from templates and plans, show snackbar

--- a/plann_app/res/locales/ru.json
+++ b/plann_app/res/locales/ru.json
@@ -37,6 +37,9 @@
     "delete": "Удалить",
     "add": "Добавить",
     "add_to_list": "Добавить в список",
+    "income_added_to_list": "В список доходов добавлено {value} в категории - {category}",
+    "expense_added_to_list": "В список расходов добавлено {value} в категории - {category}",
+    "undo": "Отменить",
     "create": "Создать",
     "to_plan": "Запланировать",
     "help": "Справка",
