fix text for no data list

--- a/plann_app/res/locales/ru.json
+++ b/plann_app/res/locales/ru.json
@@ -10,7 +10,8 @@
     "irregular": "Крупные покупки",
     "irregular_short": "Покупки",
     "no_expense": "Информации о расходах нет",
-    "no_planned_expense": "Расходы не запланированы",
+    "no_planned_expense": "Шаблонов нет",
+    "no_irregular_planned": "Крупные покупки не запланированы",
     "targets": "Финансовые цели",
     "no_target": "Целей нет",
     "date": "Дата",
