about app screen redesign from tutorial screen

--- a/plann_app/res/locales/ru.json
+++ b/plann_app/res/locales/ru.json
@@ -33,6 +33,7 @@
     "yes": "Да",
     "no": "Нет",
     "close": "Закрыть",
+    "next": "Далее",
     "continue": "Продолжить",
     "save": "Сохранить",
     "delete": "Удалить",
@@ -83,7 +84,14 @@
     "privacy_policy": "Политика конфиденциальности",
     "irregular_size_info": "{value} к {date}",
     "irregular_per_month_info": "По {value} / мес.",
-    "telegram_channel": "Telegram-канал"
+    "telegram_channel": "Telegram-канал",
+    "about_app": "О приложени"
+  },
+  "about_app": {
+    "page1": "Приложение позволяет вести учет личных финансов в \u20BD, € и $",
+    "page2": "Отслеживать количество \"свободных\" средств после вычета ежемесячных расходов",
+    "page3": "Ставить и достигать финансовые цели. Например сформировать финансовую подушку или вернуть долг",
+    "page4": "Спланировать и накопить на крупные покупки"
   },
   "shorten_numbers": {
     "default": "{value}",
