--- a/plann_app/res/locales/ru.json
+++ b/plann_app/res/locales/ru.json
@@ -9,6 +9,7 @@
     "regular_help": "Регулярные ежемесячные расходы, необходимые для поддержания текущего уровня жизни.",
     "irregular": "Крупные покупки",
     "irregular_short": "Покупки",
+    "irregular_s": "КП",
     "no_expense": "Информации о расходах нет",
     "no_planned_expense": "Шаблонов нет",
     "no_irregular_planned": "Крупные покупки не запланированы",
@@ -88,7 +89,9 @@
     "irregular_size_info": "{value} к {date}",
     "irregular_per_month_info": "По {value} / мес.",
     "telegram_channel": "Telegram-канал",
-    "about_app": "О приложени"
+    "about_app": "О приложени",
+    "balance": "Остаток",
+    "budget": "Бюджет"
   },
   "about_app": {
     "page1": "Приложение позволяет вести учет личных финансов в \u20BD, € и $",
