--- a/plann_app/res/locales/ru.json
+++ b/plann_app/res/locales/ru.json
@@ -90,12 +90,11 @@
     "irregular_per_month_info": "По {value} / мес.",
     "telegram_channel": "Telegram-канал",
     "about_app": "О приложени",
-    "balance": "Остаток",
     "budget": "Бюджет"
   },
   "about_app": {
     "page1": "Приложение позволяет вести учет личных финансов в \u20BD, € и $",
-    "page2": "Отслеживать количество \"свободных\" средств после вычета ежемесячных расходов",
+    "page2": "Расчитать остаток денежных средаств после вычета ежемесячных расходов",
     "page3": "Спланировать и накопить на крупные покупки"
   },
   "shorten_numbers": {
