data set is separate class from db service; fix showing about app screen

--- a/plann_app/res/locales/ru.json
+++ b/plann_app/res/locales/ru.json
@@ -58,6 +58,7 @@
     "account": "Накопительный счет",
     "account_help": "Виртуальный счет, баланс которого отражает необходимое количество денежных средств в выбранный период времени согласно плану крупных покупок.",
     "balance": "Баланс",
+    "free": "Остаток",
     "debet": "Приход",
     "fact": "Фактические",
     "list": "Список",
@@ -94,8 +95,8 @@
   },
   "about_app": {
     "page1": "Приложение позволяет вести учет личных финансов в \u20BD, € и $",
-    "page2": "Расчитать остаток денежных средаств после вычета ежемесячных расходов",
-    "page3": "Спланировать и накопить на крупные покупки"
+    "page2": "Сформировать бюджет на месяц",
+    "page3": "Составить финансовый план на крупные покупки"
   },
   "shorten_numbers": {
     "default": "{value}",
