fix about app texts; add ru localization in xcode

--- a/plann_app/res/locales/ru.json
+++ b/plann_app/res/locales/ru.json
@@ -95,8 +95,8 @@
   },
   "about_app": {
     "page1": "Приложение позволяет вести учет личных финансов в \u20BD, € и $",
-    "page2": "Иметь бюджет на каждый месяц",
-    "page3": "Легко составить финансовый план на крупные покупки"
+    "page2": "Составить бюджет на каждый месяц",
+    "page3": "Запланировать и накопить на крупные покупки"
   },
   "shorten_numbers": {
     "default": "{value}",
