rollback to 1.4.1 version; changed to appmetrica from yandex;

--- a/plann_app/res/locales/ru.json
+++ b/plann_app/res/locales/ru.json
@@ -95,7 +95,7 @@
   },
   "about_app": {
     "page1": "Приложение позволяет вести учет личных финансов в \u20BD, € и $",
-    "page2": "Составить бюджет на каждый месяц",
+    "page2": "Составить бюджет на месяц",
     "page3": "Запланировать и накопить на крупные покупки"
   },
   "shorten_numbers": {
