fix titles for irregular add and edit screens

--- a/plann_app/res/locales/ru.json
+++ b/plann_app/res/locales/ru.json
@@ -7,6 +7,7 @@
     "regular": "Расходы",
     "regular_short": "Расходы",
     "regular_help": "Регулярные ежемесячные расходы, необходимые для поддержания текущего уровня жизни.",
+    "irregular_one": "Покупка",
     "irregular": "Крупные покупки",
     "irregular_short": "Покупки",
     "irregular_s": "КП",
