--- a/plann_app/res/locales/ru.json
+++ b/plann_app/res/locales/ru.json
@@ -128,6 +128,7 @@
     "insurance": "Страхование",
     "debts": "Долги",
     "tax_deductions": "Налоговый вычет",
+    "scholarship": "Стипендия",
     "pension": "Пенсия",
     "gos_support": "Гос. поддержка",
     "gifts": "Подарки"
