extend text descriptions for empty lists

--- a/plann_app/res/locales/ru.json
+++ b/plann_app/res/locales/ru.json
@@ -2,8 +2,8 @@
   "texts": {
     "income": "Доход",
     "income_s": "Доходы",
-    "no_income": "Информации о доходах нет",
-    "no_planned_income": "Доходы не запланированы",
+    "no_income": "Записывайте доходы, чтобы знать сколько вы зарабатываете.",
+    "no_planned_income": "Запланируйте будущие доходы, чтобы воспользоваться ими как шаблонами, когда денежные средства поступят вам на счет.",
     "regular": "Расходы",
     "regular_short": "Расходы",
     "regular_help": "Регулярные ежемесячные расходы, необходимые для поддержания текущего уровня жизни.",
@@ -11,9 +11,10 @@
     "irregular": "Крупные покупки",
     "irregular_short": "Покупки",
     "irregular_s": "КП",
-    "no_expense": "Информации о расходах нет",
-    "no_planned_expense": "Шаблонов нет",
-    "no_irregular_planned": "Крупные покупки не запланированы",
+    "no_expense": "Записывайте ежемесячные расходы, чтобы знать сколько денежных средств у вас остается на крупные покупки, сбережения или инвестиции каждый месяц.",
+    "no_planned_expense": "Создайте шаблоны будущих расходов, чтобы удобнее их фиксировать, когда они будут происходить.",
+    "no_irregular": "В данном разделе вы можете записывать расходы на крупные покупки.",
+    "no_irregular_planned": "Запланируйте крупные покупки, и умная система автоматически расчитает и отобразит на графике, сколько ежемесячно необходимо откладывать денежных средств на цели с учетом заданных дат расходов.",
     "targets": "Финансовые цели",
     "no_target": "Целей нет",
     "emergency_fund": "Финансовая подушка",
@@ -96,7 +97,7 @@
   },
   "about_app": {
     "page1": "Приложение позволяет вести учет личных финансов в \u20BD, € и $",
-    "page2": "Составить бюджет на месяц",
+    "page2": "Составить бюджет на каждый месяц",
     "page3": "Запланировать и накопить на крупные покупки"
   },
   "shorten_numbers": {
