actualize expense category names

--- a/plann_app/res/locales/ru.json
+++ b/plann_app/res/locales/ru.json
@@ -135,22 +135,23 @@
     "gifts": "Подарки"
   },
   "expense_category_type_enum": {
-    "shops": "Магазины",
-    "house": "Жилье",
-    "cafe": "Кафе",
-    "it": "IT",
-    "auto": "Авто",
-    "clothes": "Одежда",
-    "fun": "Развлечения",
+    "shops": "Супермаркеты и магазины",
+    "house": "Все для дома",
+    "cafe": "Рестораны и кафе",
+    "it": "Коммунальные платежи, связь, интернет",
+    "auto": "Автомобиль",
+    "clothes": "Одежда и аксессуары",
+    "fun": "Отдых и развлечения",
     "gifts": "Подарки",
-    "trips": "Поездки",
+    "trips": "Поездки и путешесствия",
     "education": "Образование",
-    "medicine": "Медицина",
+    "medicine": "Здоровье и красота",
     "family": "Семья",
-    "services": "Услуги",
+    "services": "Услуги и сервисы",
     "charity": "Благотворительность",
-    "credits": "Кредиты",
-    "debts": "Долги"
+    "credits": "Погашение кредитов",
+    "debts": "Долги",
+    "transport": "Транспорт"
   },
   "package_type": {
     "weekly": "1 нед.",
