--- a/plann_app/res/locales/ru.json
+++ b/plann_app/res/locales/ru.json
@@ -14,7 +14,7 @@
     "no_expense": "Записывайте ежемесячные расходы, чтобы знать сколько денежных средств у вас остается на крупные покупки, сбережения или инвестиции каждый месяц.",
     "no_planned_expense": "Создайте шаблоны будущих расходов, чтобы удобнее их фиксировать, когда они будут происходить.",
     "no_irregular": "В данном разделе вы можете записывать расходы на крупные покупки.",
-    "no_irregular_planned": "Запланируйте крупные покупки, и умная система автоматически расчитает и отобразит на графике, сколько ежемесячно необходимо откладывать денежных средств на цели с учетом заданных дат.",
+    "no_irregular_planned": "Запланируйте крупные покупки, и умная система автоматически рассчитает, сколько ежемесячно необходимо откладывать денежных средств, чтобы успеть напокить в срок.",
     "targets": "Финансовые цели",
     "no_target": "Целей нет",
     "emergency_fund": "Финансовая подушка",
