--- a/plann_app/res/locales/ru.json
+++ b/plann_app/res/locales/ru.json
@@ -3,7 +3,7 @@
     "income": "Доход",
     "income_s": "Доходы",
     "no_income": "Записывайте доходы, чтобы знать сколько вы зарабатываете.",
-    "no_planned_income": "Запланируйте будущие доходы, чтобы воспользоваться ими как шаблонами, когда денежные средства поступят вам на счет.",
+    "no_planned_income": "В данном разделе вы можете запланировать будущие доходы.",
     "regular": "Расходы",
     "regular_short": "Расходы",
     "regular_help": "Регулярные ежемесячные расходы, необходимые для поддержания текущего уровня жизни.",
@@ -11,10 +11,10 @@
     "irregular": "Крупные покупки",
     "irregular_short": "Покупки",
     "irregular_s": "КП",
-    "no_expense": "Записывайте ежемесячные расходы, чтобы знать сколько денежных средств у вас остается на крупные покупки, сбережения или инвестиции каждый месяц.",
-    "no_planned_expense": "Создайте шаблоны будущих расходов, чтобы удобнее их фиксировать, когда они будут происходить.",
+    "no_expense": "Записывайте ваши расходы, чтобы знать сколько денежных средств у вас остается каждый месяц на крупные покупки, сбережения или инвестиции.",
+    "no_planned_expense": "Создайте шаблоны будущих расходов, чтобы воспользоваться ими, когда они будут происходить.",
     "no_irregular": "В данном разделе вы можете записывать расходы на крупные покупки.",
-    "no_irregular_planned": "Запланируйте крупные покупки, и умная система автоматически рассчитает, сколько ежемесячно необходимо откладывать денежных средств, чтобы успеть напокить в срок.",
+    "no_irregular_planned": "Запланируйте крупные покупки, а умная система автоматически рассчитает, сколько ежемесячно необходимо откладывать денежных средств, чтобы успеть накопить в срок.",
     "targets": "Финансовые цели",
     "no_target": "Целей нет",
     "emergency_fund": "Финансовая подушка",
