--- a/plann_app/res/locales/ru.json
+++ b/plann_app/res/locales/ru.json
@@ -143,7 +143,7 @@
     "clothes": "Одежда и аксессуары",
     "fun": "Отдых и развлечения",
     "gifts": "Подарки",
-    "trips": "Поездки и путешесствия",
+    "trips": "Поездки и путешествия",
     "education": "Образование",
     "medicine": "Здоровье и красота",
     "family": "Семья",
