--- a/plann_app/res/locales/ru.json
+++ b/plann_app/res/locales/ru.json
@@ -93,7 +93,8 @@
     "irregular_per_month_info": "По {value} / мес.",
     "telegram_channel": "Telegram-канал",
     "about_app": "О приложени",
-    "budget": "Бюджет"
+    "budget": "Бюджет",
+    "safety_info": "Ваши финансовые данные хранятся только на вашем устройстве и не передаются в облако."
   },
   "about_app": {
     "page1": "Приложение позволяет вести учет личных финансов в \u20BD, € и $",
