change pop up menu by one add button for income, expense, irregular  (actual and planned) screens

--- a/plann_app/res/locales/ru.json
+++ b/plann_app/res/locales/ru.json
@@ -1,12 +1,18 @@
 {
   "texts": {
     "income": "Доход",
+    "add_actual_income": "Добавить доход",
+    "add_planned_income": "Запланировать доход",
     "income_s": "Доходы",
     "no_income": "Записывайте доходы, чтобы знать сколько вы зарабатываете.",
     "no_planned_income": "В данном разделе вы можете запланировать будущие доходы.",
+    "add_actual_expense": "Добавить расход",
+    "add_template_expense": "Добавить шаблон",
     "regular": "Расходы",
     "regular_short": "Расходы",
     "regular_help": "Регулярные ежемесячные расходы, необходимые для поддержания текущего уровня жизни.",
+    "add_actual_irregular": "Добавить покупку",
+    "add_planned_irregular": "Запланировать покупку",
     "irregular_one": "Покупка",
     "irregular": "Крупные покупки",
     "irregular_short": "Покупки",
@@ -94,7 +100,7 @@
     "telegram_channel": "Telegram-канал",
     "about_app": "О приложени",
     "budget": "Бюджет",
-    "safety_info": "Ваши финансовые данные хранятся только на вашем устройстве и не передаются в облако."
+    "safety_info": "Ваша финансовая информация хранится только на вашем устройстве и не передается в облако."
   },
   "about_app": {
     "page1": "Приложение позволяет вести учет личных финансов в \u20BD, € и $",
