report per currency and only after per category for incomes and expenses

--- a/plann_app/res/locales/ru.json
+++ b/plann_app/res/locales/ru.json
@@ -17,7 +17,7 @@
     "irregular": "Крупные покупки",
     "irregular_short": "Покупки",
     "irregular_s": "КП",
-    "irregular_budget_help": "Чтобы успеть накопить в срок рекомендуем в этом месяце отложить {value}.",
+    "irregular_budget_help": "Чтобы успеть накопить в срок рекомендуем в этом месяце отложить {value} на крупные покупки.",
     "no_expense": "Записывайте ваши расходы, чтобы знать сколько денежных средств у вас остается каждый месяц на крупные покупки, сбережения или инвестиции.",
     "no_planned_expense": "Создайте шаблоны будущих расходов, чтобы воспользоваться ими, когда они будут происходить.",
     "no_irregular": "В данном разделе вы можете записывать расходы на крупные покупки.",
