--- a/plann_app/res/locales/ru.json
+++ b/plann_app/res/locales/ru.json
@@ -17,7 +17,12 @@
     "irregular": "Крупные покупки",
     "irregular_short": "Покупки",
     "irregular_s": "КП",
-    "irregular_budget_help": "Чтобы успеть накопить в срок рекомендуем в этом месяце отложить {value} на крупные покупки.",
+    "delta_info_header": "Дельта = Доходы - Расходы",
+    "delta_info_positive": "{value}% заработанных средств в этом месяце осталось после вычета ежемесячных расходов.",
+    "delta_info_negative": "В этом месяце расходы превысили доходы на {value}%, рекумендуем выполнить анализ отчета о расходах.",
+    "balance_info_positive": "Остаток денежных средств в этом месяце составляет {value}",
+    "balance_info_negative": "В этом месяце баланс денежных средств отрицательный, рекомендуем выполнить анализ отчета о расходах или пересмотреть план крупных покупок.",
+    "irregular_budget_help": "Чтобы успеть накопить в срок рекомендуем в этом месяце согласно плану отложить {value} на крупные покупки.",
     "no_expense": "Записывайте ваши расходы, чтобы знать сколько денежных средств у вас остается каждый месяц на крупные покупки, сбережения или инвестиции.",
     "no_planned_expense": "Создайте шаблоны будущих расходов, чтобы воспользоваться ими, когда они будут происходить.",
     "no_irregular": "В данном разделе вы можете записывать расходы на крупные покупки.",
