tips bloc added to finance screen

--- a/plann_app/res/locales/ru.json
+++ b/plann_app/res/locales/ru.json
@@ -24,9 +24,9 @@
     "balance_info_negative": "В этом месяце баланс денежных средств отрицательный, рекомендуем выполнить анализ отчета о расходах или пересмотреть план крупных покупок.",
     "irregular_budget_help": "Чтобы успеть накопить в срок рекомендуем в этом месяце согласно плану отложить {value} на крупные покупки.",
     "no_expense": "Записывайте ваши расходы, чтобы знать сколько денежных средств у вас остается каждый месяц на крупные покупки, сбережения или инвестиции.",
-    "no_planned_expense": "Создайте шаблоны будущих расходов, чтобы воспользоваться ими, когда они будут происходить.",
+    "no_planned_expense": "Создайте шаблоны регулярных расходов, чтобы не вводить информацию каждый раз.",
     "no_irregular": "В данном разделе вы можете записывать расходы на крупные покупки.",
-    "no_irregular_planned": "Запланируйте крупные покупки, а умная система автоматически рассчитает, сколько ежемесячно необходимо откладывать денежных средств, чтобы успеть накопить в срок.",
+    "no_irregular_planned": "Запланируйте крупные покупки, а умная система автоматически рассчитает, сколько ежемесячно необходимо откладывать, чтобы успеть накопить в срок.",
     "targets": "Финансовые цели",
     "no_target": "Целей нет",
     "emergency_fund": "Финансовая подушка",
@@ -107,6 +107,40 @@
     "about_app": "О приложени",
     "budget": "Бюджет",
     "safety_info": "Ваша финансовая информация хранится только на вашем устройстве и не передается в облако."
+  },
+  "tips": {
+    "header": "Заметки и советы",
+    "ПРИЛОЖЕНИЕ": "",
+    "tip_101": "При свайпе справа по разделам доходы, расходы или крупные покупки на экране Финансы, появятся \"быстрые\" кнопки.",
+    "tip_102": "В меню Настройки можно найти ссылку на оффициальный telegram канал.",
+    "tip_103": "В приложении можно вести учет личных финансов в \u20BD, € и $.",
+    "tip_104": "Разные категории расходов и доходов для удобства отображаются разными цветами.",
+    "ОТЧЕТЫ": "",
+    "tip_105": "Если тапнуть по заголовку отчета, то произойдет быстрая перемотка на текущий месяц.",
+    "tip_106": "Ежемесячные отчеты формируются в разрезе выбранной валюты",
+    "tip_107": "Заработали $, а тратите в \u20BD? Зафиксируйте доход по курсу обмена и расход в соотвутвующей валюте тоже.",
+    "ДОХОДЫ": "",
+    "tip_108": "Записывайте все доходы, чтобы знать сколько вы зарабатываете.",
+    "РАСХОДЫ": "",
+    "tip_109": "Записывайте все расходы, чтобы знать сколько вы тратите.",
+    "tip_110": "Для регулярных расходов создайте шаблоны, чтобы не вводить информацию каждый раз.",
+    "tip_111": "Ежемесячные расходы необходимы для поддержания текущего уровня жизни.",
+    "tip_112": "Крупные покупки фиксируйте отдельно от расходов в соответствующем разделе.",
+    "tip_113": "Изменяйте планируемую дату крупных покупок, чтобы подобрать комфортный размер ежемесячных накоплений.",
+    "КРУПНЫЕ ПОКУПКИ": "",
+    "tip_114": "Оптимальные даты начала накоплений для каждой покупки рассчитываются автоматически.",
+    "tip_115": "Отчеты о расходах и доходах для удобства отсортированы по убыванию.",
+    "tip_116": "Откройте отедельный банковский счет для накоплений на крупные покупки.",
+    "ДЕЛЬТА": "",
+    "tip_117": "Дельта - разница между доходами и расходами в текущем месяце.",
+    "tip_118": "Обращайте внимание на дельту, это самый важный параметр вашего бюджета.",
+    "tip_119": "Дельта показывает сколько денежных средств осталось на ваши цели в текущем месяце.",
+    "tip_120": "Отрицательная дельта говорит о том, что израсходовано больше чем заработано.",
+    "tip_121": "При отрицательной дельте выполните анализ отчета о расходах, чтобы повысить эффективность бюджета в будущем.",
+    "ОСТАТОК": "",
+    "tip_122": "Остаток - денежные средства после вычета расходов и накоплений на крупные покупки.",
+    "tip_123": "Остаток денежных средств используйте, чтобы увеличить сбережения или инвестируйте.",
+    "tip_124": "При отрицательном остатке проанализируйте отчет о расходах и скорректируйте план крупных покупок."
   },
   "about_app": {
     "page1": "Приложение позволяет вести учет личных финансов в \u20BD, € и $",
