--- a/plann_app/res/locales/ru.json
+++ b/plann_app/res/locales/ru.json
@@ -109,7 +109,6 @@
     "safety_info": "Ваша финансовая информация хранится только на вашем устройстве и не передается в облако."
   },
   "tips": {
-    "header": "Заметки и советы",
     "ПРИЛОЖЕНИЕ": "",
     "tip_101": "При свайпе справа по разделам доходы, расходы или крупные покупки на экране Финансы, появятся \"быстрые\" кнопки.",
     "tip_102": "В меню Настройки можно найти ссылку на оффициальный telegram канал.",
@@ -117,7 +116,7 @@
     "tip_104": "Разные категории расходов и доходов для удобства отображаются разными цветами.",
     "ОТЧЕТЫ": "",
     "tip_105": "Если тапнуть по заголовку отчета, то произойдет быстрая перемотка на текущий месяц.",
-    "tip_106": "Ежемесячные отчеты формируются в разрезе выбранной валюты",
+    "tip_106": "Ежемесячные отчеты формируются в разрезе выбранной валюты.",
     "tip_107": "Заработали $, а тратите в \u20BD? Зафиксируйте доход по курсу обмена и расход в соотвутвующей валюте тоже.",
     "ДОХОДЫ": "",
     "tip_108": "Записывайте все доходы, чтобы знать сколько вы зарабатываете.",
