disable month carusel budget helps; fix locales; fix db test data set;

--- a/plann_app/res/locales/ru.json
+++ b/plann_app/res/locales/ru.json
@@ -5,7 +5,11 @@
     "add_planned_income": "Запланировать доход",
     "income_s": "Доходы",
     "no_income": "Записывайте доходы, чтобы знать сколько вы зарабатываете.",
-    "no_planned_income": "В данном разделе вы можете запланировать будущие доходы.",
+    "no_planned_income": "Доходы не запланированы.",
+    "no_expense": "Записывайте расходы, чтобы знать сколько вы тратите.",
+    "no_planned_expense": "Создайте шаблоны, чтобы не вводить информацию каждый раз.",
+    "no_irregular": "Крупных покупок нет.",
+    "no_irregular_planned": "Запланируйте крупные покупки, чтобы успеть накопить в срок.",
     "add_actual_expense": "Добавить расход",
     "add_template_expense": "Добавить шаблон",
     "regular": "Расходы",
@@ -23,10 +27,6 @@
     "balance_info_positive": "Остаток денежных средств в этом месяце составляет {value}",
     "balance_info_negative": "В этом месяце баланс денежных средств отрицательный, рекомендуем выполнить анализ отчета о расходах или пересмотреть план крупных покупок.",
     "irregular_budget_help": "Чтобы успеть накопить в срок рекомендуем в этом месяце согласно плану отложить {value} на крупные покупки.",
-    "no_expense": "Записывайте ваши расходы, чтобы знать сколько денежных средств у вас остается каждый месяц на крупные покупки, сбережения или инвестиции.",
-    "no_planned_expense": "Создайте шаблоны регулярных расходов, чтобы не вводить информацию каждый раз.",
-    "no_irregular": "В данном разделе вы можете записывать расходы на крупные покупки.",
-    "no_irregular_planned": "Запланируйте крупные покупки, а умная система автоматически рассчитает, сколько ежемесячно необходимо откладывать, чтобы успеть накопить в срок.",
     "targets": "Финансовые цели",
     "no_target": "Целей нет",
     "emergency_fund": "Финансовая подушка",
