--- a/plann_app/res/locales/ru.json
+++ b/plann_app/res/locales/ru.json
@@ -111,7 +111,7 @@
   "tips": {
     "ПРИЛОЖЕНИЕ": "",
     "tip_101": "При свайпе справа по разделам доходы, расходы или крупные покупки на экране Финансы, появятся \"быстрые\" кнопки.",
-    "tip_102": "В меню Настройки можно найти ссылку на оффициальный telegram канал.",
+    "tip_102": "В меню Настройки можно найти ссылку на официальный telegram канал.",
     "tip_103": "В приложении можно вести учет личных финансов в \u20BD, € и $.",
     "tip_104": "Разные категории расходов и доходов для удобства отображаются разными цветами.",
     "ОТЧЕТЫ": "",
@@ -129,7 +129,7 @@
     "КРУПНЫЕ ПОКУПКИ": "",
     "tip_114": "Оптимальные даты начала накоплений для каждой покупки рассчитываются автоматически.",
     "tip_115": "Отчеты о расходах и доходах для удобства отсортированы по убыванию.",
-    "tip_116": "Откройте отедельный банковский счет для накоплений на крупные покупки.",
+    "tip_116": "Откройте отдельный банковский счет, чтобы копить на крупные покупки.",
     "ДЕЛЬТА": "",
     "tip_117": "Дельта - разница между доходами и расходами в текущем месяце.",
     "tip_118": "Обращайте внимание на дельту, это самый важный параметр вашего бюджета.",
