one more fix locales, fix text size for drop down menu with categories

--- a/plann_app/res/locales/ru.json
+++ b/plann_app/res/locales/ru.json
@@ -127,7 +127,7 @@
     "tip_112": "Крупные покупки фиксируйте отдельно от расходов в соответствующем разделе.",
     "tip_113": "Изменяйте планируемую дату крупных покупок, чтобы подобрать комфортный размер ежемесячных накоплений.",
     "КРУПНЫЕ ПОКУПКИ": "",
-    "tip_114": "Оптимальные даты начала накоплений для каждой покупки рассчитываются автоматически.",
+    "tip_114": "Оптимальная дата начала накоплений для каждой покупки рассчитываются автоматически.",
     "tip_115": "Отчеты о расходах и доходах для удобства отсортированы по убыванию.",
     "tip_116": "Откройте отдельный банковский счет, чтобы копить на крупные покупки.",
     "ДЕЛЬТА": "",
