fix locales for header of all add screens

--- a/plann_app/res/locales/ru.json
+++ b/plann_app/res/locales/ru.json
@@ -1,8 +1,12 @@
 {
   "texts": {
     "income": "Доход",
-    "add_actual_income": "Добавить доход",
-    "add_planned_income": "Запланировать доход",
+    "add_actual_income": "Добавить",
+    "add_planned_income": "Запланировать",
+    "add_actual_expense": "Добавить",
+    "add_template_expense": "Шаблон",
+    "add_actual_irregular": "Добавить",
+    "add_planned_irregular": "Запланировать",
     "income_s": "Доходы",
     "no_income": "Записывайте доходы, чтобы знать сколько вы зарабатываете.",
     "no_planned_income": "Доходы не запланированы.",
@@ -10,13 +14,9 @@
     "no_planned_expense": "Создайте шаблоны, чтобы не вводить информацию каждый раз.",
     "no_irregular": "Крупных покупок нет.",
     "no_irregular_planned": "Запланируйте крупные покупки, чтобы успеть накопить в срок.",
-    "add_actual_expense": "Добавить расход",
-    "add_template_expense": "Добавить шаблон",
     "regular": "Расходы",
     "regular_short": "Расходы",
     "regular_help": "Регулярные ежемесячные расходы, необходимые для поддержания текущего уровня жизни.",
-    "add_actual_irregular": "Добавить покупку",
-    "add_planned_irregular": "Запланировать покупку",
     "irregular_one": "Покупка",
     "irregular": "Крупные покупки",
     "irregular_short": "Покупки",
