fix add tag label

--- a/plann_app/res/locales/ru.json
+++ b/plann_app/res/locales/ru.json
@@ -8,7 +8,7 @@
     "add_template_expense": "Шаблон",
     "add_actual_irregular": "Добавить",
     "add_planned_irregular": "Запланировать",
-    "add_tag": "Добавить",
+    "add_tag": "Добавить метку",
     "income_s": "Доходы",
     "no_income": "Записывайте доходы, чтобы знать сколько вы зарабатываете.",
     "no_planned_income": "Доходы не запланированы.",
