tags for income and expense items

--- a/plann_app/res/locales/ru.json
+++ b/plann_app/res/locales/ru.json
@@ -41,6 +41,7 @@
     "creation_date": "Создано",
     "nearest_date": "Ближайшая дата",
     "category": "Категория",
+    "categories": "Категории",
     "mode": "Периодичность",
     "expense": "Расход",
     "title": "Название",
