show message if no tags

--- a/plann_app/res/locales/ru.json
+++ b/plann_app/res/locales/ru.json
@@ -16,6 +16,7 @@
     "no_planned_expense": "Создайте шаблоны, чтобы не вводить информацию каждый раз.",
     "no_irregular": "Крупных покупок нет.",
     "no_irregular_planned": "Запланируйте крупные покупки, чтобы успеть накопить в срок.",
+    "no_tags": "Метки не установлены.",
     "regular": "Расходы",
     "regular_short": "Расходы",
     "regular_help": "Регулярные ежемесячные расходы, необходимые для поддержания текущего уровня жизни.",
